--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,8 +6,8 @@
 # Appearance
 
 appearance:
-  theme_day: minimal
-  theme_night: apogee
+  theme_day: earth
+  theme_night: dark
   font: native
   font_size: M
 
